header image size change tablet

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -168,6 +168,9 @@ html{
 /* tablet */
 @media only screen and (max-width:960px){
 
+.headerimage{
+  background-position:50%;
+}
   .sitecontainer{
     width: 100%;
   }
